<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mongoose</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">339906879523768</string>

    <string name="btnText">Text</string>
	<string name="btnPicture">Picture</string>
	<string name="btnVideo">Video</string>
	<string name="btnLocal">Select local file</string>
	<string name="btnAccept">OK</string>
	<string name="btnCancel">X</string>
    
	<string name="btnRec">o</string>
	<string name="btnStop">[]</string>
	<string name="btnPause">||</string>
	<string name="btnPlay">|></string>
	
	<string name="btnVideoOk">OK</string>
	<string name="btnVideoCancel">X</string>
	<color name="white">#000000</color>
	
</resources>
