<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:background="@color/white" >
    
	<LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    	
        <View
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="2" />
        
        <Button 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/btnRec"
            android:id="@+id/btnRecStop" />
        
        <View
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="2" />
        
        <Button 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/btnPlay"
            android:id="@+id/btnPauseResume" />
        
        <View
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="2" />
        
        <Button 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/btnVideoOk"
            android:id="@+id/btnVideoOk" />
        
        <View
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="2" />
        
        <Button 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:text="@string/btnVideoCancel"
            android:id="@+id/btnVideoCancel" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:orientation="vertical" >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/txtVideoRecording"/>
        
        <VideoView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:id="@+id/vvVideo"/>
    </LinearLayout>
    
</LinearLayout>
